# ing-secure-prompt

./: .codegenignore  .codegptignore  .codexrc.json  .gitignore  Makefile  README.md  README_Codex.md  SecurePrompt_ING_M1_FINAL.pptx  build_secureprompt_ing_deck.py  main.py  merged.xlsx  package-lock.json  pyproject.toml  requirement.txt  requirements.txt  secureprompt.db  working_app.py
AGENT/: 00_BRIEF.md  10_TASKS_WEEK1.md  20_GUARDRAILS.md  25_DATA_INTEGRATION.md  30_ACCEPTANCE_TESTS.md  40_CHEATSHEET.md
PROMPTS/: Column A Prompt.txt  Column A.xlsx  Column B Sanitized Column A Prompt.xlsx  Column C.xlsx  Column D.xlsx  Column_D___label_frequency.csv  Prompt test 1.txt  SecurePrompt MVGv2.docx  column_d_label_counts.xlsx  guardrails.system.txt  label_counts_column_b.csv  label_to_original_mapping Column BA.xlsx  label_to_original_mapping_C_D.xlsx  merged_v2.xlsx  prompts_01_03_16.json  prompts_01_05_15.json  prompts_01_06_14.json  prompts_01_06_18.json  prompts_01_12_15.json  prompts_02_05_16.json  prompts_02_09_10.json  prompts_03_09_10.json  prompts_04_05_09.json  prompts_04_07_15.json  prompts_04_13_16.json  prompts_05_11_13.json  prompts_06_07_12.json  prompts_06_07_15.json  prompts_07_08_12.json  prompts_07_08_13.json  prompts_08_17_18.json  prompts_09_16_17.json  prompts_10_12_16.json  prompts_13_16_18.json
api/: main.py
config/: datasets.yml  label_taxonomy.yml  patterns.json  prompt_lexicon.auto.yml  prompt_lexicon.yml  sensitivity.yml  token_aliases.yml
datasets/: updated_ruleset.yaml  whitelist.yaml
docs/: ARCHITECTURE.md
env/: pyvenv.cfg
instance/: secureprompt.db  test.db
policy/: placeholders.yml
reports/: 02_c2_banking_definitions_sanitized.xlsx  03_c2_cmdb_data_sanitized.xlsx  05_c2_guidelines_sanitized.xlsx  06_c2_iaas_infrastructure_detailed_sanitized.xlsx  08_c2_physical_infrastructure_detailed_sanitized.xlsx  09_c2_policies_sanitized.xlsx  10_c2_processes_sanitized.xlsx  11_c2_product_specifications_sanitized.xlsx  12_c3_banking_agreements_customers_suppliers_sanitized.xlsx  13_c3_customer_data_sanitized.xlsx  14_c3_link_customer_supplier_sanitized.xlsx  15_c3_payment_orders_sanitized.xlsx  16_c3_product_customer_link_sanitized.xlsx  17_c4_customers_auth_data_sanitized.xlsx  18_c4_customers_s_data_sanitized.xlsx  example.redacted_sanitized.xlsx  merged_eval.alt.xlsx  merged_eval.xlsx  metrics.md  prompt_eval_anomalies.md  prompt_eval_summary.json  sanitized_index.csv  scrub_stats.json
scripts/: build_label_taxonomy.py  codex-edit.sh  dev.sh  eval_prompts.py  eval_prompts_alt.py  k2_phase0.sh  k2_phase1.sh  k2_phase2.sh  k2_phase3.sh  migrate_receipts_actions.py  repair_pyproject_k2.py  repair_pyproject_k2_step2.py  sanitize_files.py  scrub_stats.py  serve.sh  setup_venv.sh
secureprompt/: cli.py
secureprompt_test/: ing_branded_app.py  secureprompt.db
slides/: OnePager.md  OnePager.pptx  ~$OnePager.pptx
src/: audit.py  classifier.py  descrubber.py  pdf.py  prepare_finetune_train_bert.py  scrubber.py  vault.py
templates/: audit.html  base.html  dashboard.html
tests/: test_api.py  test_audit_chain_v2.py  test_audit_log.py  test_baseline_builder.py  test_confidence_rules_only.py  test_descrub_route.py  test_detectors_core.py  test_entities_basic.py  test_eval_minimal_diff.py  test_eval_token_fallback.py  test_evaluator.py  test_file_loaders.py  test_image_redaction.py  test_ingest_secureprompt.py  test_migrate_receipts_actions.py  test_pdf_text.py  test_pipeline.py  test_placeholder_cleaner.py  test_policy_actions.py  test_prompt_miner.py  test_receipt_confidence.py  test_receipts_roundtrip.py  (+10 more)
(+114 files in other folders)
