[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureprompt"
version = "0.0.1"
description = "SecurePrompt scrubbing pipeline"
requires-python = ">=3.10"

# Optional extras (so `pip install -e '.[test]'` works)
[project.optional-dependencies]
test = [
  "pytest",
  "httpx",          # fastapi/starlette test client
  "pdfminer.six",   # PDF text
  "pillow",         # images for OCR redaction tests
  "pytesseract"     # OCR (tests auto-skip if binary missing)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["secureprompt*"]

[tool.setuptools]
include-package-data = true

# Ship policy files, reports, etc. (adjust globs to your tree)
[tool.setuptools.package-data]
secureprompt = [
  "policy/**/*.yml",
  "policy/**/*.yaml",
  "AGENT/**/*.md",
  "reports/**/*",
  "api/**/*.json"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["data/"]
