[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secureprompt"
version = "0.0.1"
description = "SecurePrompt scrubbing pipeline"
# We stick to 3.12 to avoid wheel/ABI hiccups you hit on 3.13
requires-python = ">=3.12,<3.13"

# Core runtime deps (keep minimal)
dependencies = [
  "cryptography>=41",
]

# Optional extras
[project.optional-dependencies]
# API server pieces
api = [
  "fastapi==0.118.0",
  "uvicorn>=0.37",
  "httpx>=0.28",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
]

# Evaluation / spreadsheets / data helpers
eval = [
  "openpyxl==3.1.5",   # Excel I/O (pinned; stable)
  "et-xmlfile>=2.0.0", # tiny helper used by openpyxl
  "pandas>=2.2",
  "pypdf>=6.0",        # unified replacement for PyPDF2
  "pdfminer.six>=20231228",
]

# OCR / imaging (used by redaction tests)
ocr = [
  "pillow>=10.4",
  "pytesseract>=0.3.10",
]

# Test bundle = everything needed to run the suite
test = [
  "pytest>=8.2",
  "fastapi==0.118.0",
  "httpx>=0.28",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
  "openpyxl==3.1.5",
  "et-xmlfile>=2.0.0",
  "pandas>=2.2",
  "pypdf>=6.0",
  "pdfminer.six>=20231228",
  "pillow>=10.4",
  "pytesseract>=0.3.10",
]

# Dev tools (formatter/linter/type-checker)
dev = [
  "black>=24.8",
  "ruff>=0.5",
  "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["secureprompt*"]

[tool.setuptools]
include-package-data = true

# Ship policy files, reports, etc. (adjust globs if needed)
[tool.setuptools.package-data]
secureprompt = [
  "policy/**/*.yml",
  "policy/**/*.yaml",
  "AGENT/**/*.md",
  "reports/**/*",
  "api/**/*.json"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["data/"]
